src/objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <label>Team Type</label>
        <picklist>
            <picklistValues>
                <fullName>CRM Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post sales CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Approvers Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Owner Assignment Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TowerLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tower__c.ProjectName__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tower__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <label>Tower</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>